--- a/static/style.css
+++ b/static/style.css
@@ -18,3 +18,5 @@ tr:nth-child(odd)		{ background-color:#eee; }
 tr:nth-child(even)	{ background-color:#fff; }
 
 tr:hover            { background-color: #ffff99;}
+
+.under-limit { background-color: red; }
