--- a/templates/view.html
+++ b/templates/view.html
@@ -3,6 +3,15 @@
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
   <h1>Stock Screener Results (Updated: {{ date }})</h1>
+
+  <h2>Please Donate to Keep This Webpage Active!</h2>
+  <form action="https://www.paypal.com/donate" method="post" target="_top">
+    <input type="hidden" name="business" value="EAL2W358H6JKG" />
+    <input type="hidden" name="item_name" value="Stock Screener" />
+    <input type="hidden" name="currency_code" value="USD" />
+    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+    <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+  </form>
   {% for table in tables %}
     <h2>{{titles[loop.index]}}</h2>
     
