--- a/templates/view.html
+++ b/templates/view.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>Simple tables</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+
 <div class=page>
   <h1>Stock Screener Results (Updated: {{ date }})</h1>
 
@@ -12,9 +13,15 @@
     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
     <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
   </form>
+
+  <form action="/export_table" method="get"> <!-- or method="post" -->
+    <input type="submit" value="Download Table" >
+  </form>
+
   {% for table in tables %}
     <h2>{{titles[loop.index]}}</h2>
     
     {{ table|safe }}
   {% endfor %}
 </div>
+
